add basic implementation for mpi, change arguments filename field to inputfile

--- a/source/mpi/makefile
+++ b/source/mpi/makefile
@@ -18,6 +18,6 @@ utilities.o: utilities.c
 	$(CC) $(CFLAGS) -c utilities.c
 
 usage:
-	@echo 'Usage of Project: valgrind ./game_of_life'
+	@echo 'Usage of Project: mpiexec -n number_of_processes ./game_of_life -d dimentions -l loops -i inputfile -o'
 clean: 
 	rm -f $(OBJS) $(EXEC) $(OUTPUT)
